--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gsap": "^3.12.5",
+    "prettier": "^3.3.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
